Adopt Gradle 9 and AGP 9 (#144)
* Migrate Renovate configuration to json5

* Polish Renovate configuration file

Updated Renovate configuration to use recommended settings.

* Refactor GitHub Actions workflow for build process

* Refactor release workflow for JDK and Gradle setup

Updated JDK distribution and modified steps for Gradle setup.

* chore(deps): update dependency com.gradle.plugin-publish to v1.3.1

* chore(deps): update actions/checkout action to v6

* chore(deps): update actions/upload-artifact action to v6

* chore(deps): update actions/setup-java action to v5

* Update Gradle properties for caching and JVM args

* fix(deps): update dependency androidx.compose.runtime:runtime to v1.10.1

* chore(deps): update gradle to v8.14.4

* chore(deps): update dependency com.gradle.plugin-publish to v2

* fix(deps): update kotlin monorepo to v2.3.0

* Update code styles and ignore rules

* chore(deps): update dependency org.jlleitschuh.gradle.ktlint to v12.3.0

* fix(deps): update dependency com.android.tools.build:gradle to v8.13.2

* Fix samples

* chore(deps): update dependency org.jlleitschuh.gradle.ktlint to v14

* Fix formats

* chore(deps): update gradle to v9

* Fix keepFilename

* Fix junit platform

* Run CI on Java 21

* Bump Metalava to 1.0.0-alpha14

* Migrate to BCV and drop kotlin-dsl

* Dump APIs

* fix(deps): update dependency org.junit:junit-bom to v6

* Eliminate buildSrc

* Cleanups

* Enable explicit API mode

* fix(deps): update dependency androidx.compose.runtime:runtime to v1.10.2

* chore(deps): update gradle to v9.3.1

* Simplify MetalavaGradlePluginTest and enable CC by default

* Use Java 25 on CI

* Workaround CC issues when using TestKit

* Migrate to AGP API

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* fix(deps): update agp to v9

* Migrate samples to AGP 9

* Constraint compileSdk and minSdk

* Pin jvmTarget and languageVersion for the plugin

* Enable stricter validation for the plugin

* Require min G