@@ -1,17 +1,15 @@
+import org.gradle.api.plugins.JavaPlugin.API_ELEMENTS_CONFIGURATION_NAME
+import org.jetbrains.kotlin.gradle.dsl.JvmDefaultMode
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
+
 plugins {
-    `kotlin-dsl`
-    `java-gradle-plugin`
-    `maven-publish`
+    alias(libs.plugins.kotlin.jvm)
     alias(libs.plugins.ktlintGradle)
     alias(libs.plugins.android.lint)
     alias(libs.plugins.pluginPublish)
     alias(libs.plugins.metalavaGradle)
     alias(libs.plugins.buildConfig)
-}
-
-repositories {
-    google()
-    mavenCentral()
 }
 
 group = "me.tylerbwong.gradle.metalava"
@@ -26,14 +24,14 @@ buildConfig {
 }
 
 gradlePlugin {
-    website.set("https://github.com/tylerbwong/metalava-gradle")
-    vcsUrl.set("https://github.com/tylerbwong/metalava-gradle")
+    website = "https://github.com/tylerbwong/metalava-gradle"
+    vcsUrl = "https://github.com/tylerbwong/metalava-gradle"
     plugins {
         create("metalavaPlugin") {
             id = "me.tylerbwong.gradle.metalava"
             displayName = "Metalava Gradle Plugin"
             description = "A Gradle plugin for Metalava, AOSP's tool for API metadata extraction and compatibility tracking."
-            tags.set(listOf("metalava", "api-tracking"))
+            tags = listOf("metalava", "api-tracking")
             implementationClass = "me.tylerbwong.gradle.metalava.plugin.MetalavaPlugin"
         }
     }
@@ -41,6 +39,15 @@ gradlePlugin {
 
 kotlin {
     explicitApi()
+    compilerOptions {
+        allWarningsAsErrors = true
+        // https://docs.gradle.org/current/userguide/compatibility.html#kotlin
+        apiVersion = KotlinVersion.KOTLIN_2_2
+        languageVersion = apiVersion
+        jvmTarget = JvmTarget.fromTarget(libs.versions.jvmTarget.get())
+        jvmDefault = JvmDefaultMode.NO_COMPATIBILITY
+        freeCompilerArgs.add("-Xjdk-release=${libs.versions.jvmTarget.get()}")
+    }
 }
 
 lint {
@@ -56,11 +63,12 @@ metalava {
     version = libs.versions.android.metalava
 }
 
-tasks.test {
-    useJUnitPlatform()
-    testLogging {
-        events("passed", "skipped", "failed")
-    }
+configurations.named(API_ELEMENTS_CONFIGURATION_NAME) {
+    attributes.attribute(
+        // TODO: https://github.com/gradle/gradle/issues/24608
+        GradlePluginApiVersion.GRADLE_PLUGIN_API_VERSION_ATTRIBUTE,
+        objects.named(libs.versions.minGradle.get()),
+    )
 }
 
 val testPluginClasspath by configurations.registering {
@@ -68,16 +76,36 @@ val testPluginClasspath by configurations.registering {
 }
 
 dependencies {
-    compileOnly(gradleApi())
-    compileOnly(kotlin("gradle-plugin"))
-    compileOnly(libs.androidGradle)
+    compileOnly(libs.kotlin.gradlePlugin)
+    compileOnly(libs.android.gradlePluginApi)
 
+    testImplementation(platform(libs.junit.bom))
     testImplementation(libs.junit.jupiter)
-    testImplementation(libs.junit.jupiter.params)
+    testImplementation(libs.junit.jupiterParams)
+    testRuntimeOnly(libs.junit.platformLauncher)
 
-    testPluginClasspath(libs.androidGradle)
+    testPluginClasspath(libs.android.gradlePlugin)
 
     lintChecks(libs.androidx.gradlePluginLints)
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.release = libs.versions.jvmTarget.get().toInt()
+}
+
+tasks.test {
+    useJUnitPlatform()
+    testLogging {
+        events("passed", "skipped", "failed")
+    }
+    // Required to test configuration cache in tests when using withDebug().
+    // See https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241.
+    jvmArgs(
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+    )
 }
 
 tasks.pluginUnderTestMetadata {
